--- a/index.html
+++ b/index.html
@@ -11,21 +11,113 @@
     <link href="assets/img/favicon.ico" rel="icon">
     <link href="assets/img/logo192.png" rel="apple-touch-icon">
 
-
     <!-- Google Fonts -->
     <link href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
           rel="stylesheet">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?">
+    <!-- Fonts Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/css/style.css">
     <!-- Bánh gai Bà Tới -->
-    <title>Bánh gai Bà Tới</title>
+    <title>Title</title>
 </head>
 <body>
 <header>
-
+    <div class="header bg-black" id="header">
+        <div class="container-fluid">
+            <div class="main-header row p-3 m-3">
+                <div class="col-md-3 follow-me">
+                    <div class="main-follow">
+                        <div class="content-follow">
+                            <div class="follow-item text-content text-center">
+                                <span>Theo dõi chúng tôi</span>
+                                <br>
+                                <span>---</span>
+                            </div>
+                            <div class="follow-item social-logo">
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="icon-facebook detail-social">
+                                        <a href="#" class="text-green text-decoration-none">
+                                            <i class="fa-brands fa-facebook-f"></i>
+                                        </a>
+                                    </div>
+                                    <div class="icon-instagram detail-social">
+                                        <a href="#" class="text-green text-decoration-none">
+                                            <i class="fa-brands fa-instagram"></i>
+                                        </a>
+                                    </div>
+                                    <div class="icon-youtube detail-social">
+                                        <a href="#" class="text-green text-decoration-none">
+                                            <i class="fa-brands fa-youtube"></i>
+                                        </a>
+                                    </div>
+                                    <div class="icon-tiktok detail-social">
+                                        <a href="#" class="text-green text-decoration-none">
+                                            <i class="fa-brands fa-tiktok"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 main-header-detail">
+                    <div class="detail-header">
+                        <div class="content-header text-center">
+                            <div class="header-logo">
+                                <div class="logo">
+                                    <img src="/assets/img/logo.png" alt="Logo-dac-san-banh-gai">
+                                </div>
+                            </div>
+<!--                            <div class="header-navbar">-->
+<!--                                <nav class="navbar navbar-expand-lg navbar-light">-->
+<!--                                    <div class="collapse navbar-collapse" id="navbarNav">-->
+<!--                                        <ul class="navbar-nav">-->
+<!--                                            <li class="nav-item active">-->
+<!--                                                <a class="nav-link" href="#">Trang chủ</a>-->
+<!--                                            </li>-->
+<!--                                            <li class="nav-item">-->
+<!--                                                <a class="nav-link" href="#">Giới thiệu</a>-->
+<!--                                            </li>-->
+<!--                                            <li class="nav-item">-->
+<!--                                                <a class="nav-link" href="#">Sản phẩm</a>-->
+<!--                                            </li>-->
+<!--                                            <li class="nav-item">-->
+<!--                                                <a class="nav-link" href="#">Quy trình rang</a>-->
+<!--                                            </li>-->
+<!--                                            <li class="nav-item">-->
+<!--                                                <a class="nav-link" href="#">Giỏ hàng</a>-->
+<!--                                            </li>-->
+<!--                                            <li class="nav-item">-->
+<!--                                                <a class="nav-link" href="#">Liên hệ</a>-->
+<!--                                            </li>-->
+<!--                                        </ul>-->
+<!--                                    </div>-->
+<!--                                </nav>-->
+<!--                            </div>-->
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 contact">
+                    <div class="main-contact">
+                        <div class="content-contact text-center">
+                            <div class="contact-item text-content text-center">
+                                <span>Liên hệ hotline</span>
+                                <br>
+                                <span>---</span>
+                            </div>
+                            <p class="text-phone text-green">
+                                0909.090.909
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </header>
 <section>
 
