--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/responsive.css">
     <!-- Bánh gai Bà Tới -->
     <title>Title</title>
 </head>
@@ -28,8 +29,8 @@
 <header>
     <div class="header bg-black" id="header">
         <div class="container-fluid">
-            <div class="main-header row p-3 m-3">
-                <div class="col-md-3 follow-me">
+            <div class="main-header row p-3">
+                <div class="col-6 col-md-3 follow-me">
                     <div class="main-follow">
                         <div class="content-follow">
                             <div class="follow-item text-content text-center">
@@ -38,7 +39,7 @@
                                 <span>---</span>
                             </div>
                             <div class="follow-item social-logo">
-                                <div class="d-flex justify-content-between align-items-center">
+                                <div class="d-flex justify-content-around align-items-center">
                                     <div class="icon-facebook detail-social">
                                         <a href="#" class="text-green text-decoration-none">
                                             <i class="fa-brands fa-facebook-f"></i>
@@ -64,12 +65,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 main-header-detail">
+                <div class="col-12 col-md-6 main-header-detail">
                     <div class="detail-header">
                         <div class="content-header text-center">
                             <div class="header-logo">
                                 <div class="logo">
-                                    <img src="/assets/img/logo.png" alt="Logo-dac-san-banh-gai">
+                                    <a href="index.html">
+                                        <img src="/assets/img/kaffa_logo_light_1x.png" alt="Logo-dac-san-banh-gai">
+                                    </a>
                                 </div>
                             </div>
 <!--                            <div class="header-navbar">-->
@@ -101,10 +104,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 contact">
+                <div class="col-6 col-md-3 contact">
                     <div class="main-contact">
                         <div class="content-contact text-center">
-                            <div class="contact-item text-content text-center">
+                            <div class="follow-item text-content text-center">
                                 <span>Liên hệ hotline</span>
                                 <br>
                                 <span>---</span>
@@ -119,12 +122,140 @@
         </div>
     </div>
 </header>
-<section>
-
+<section class=" body">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 products">
+                <div class="title">
+                    SẢN PHẨM
+                </div>
+                <div class="row">
+                    <div class="col-md-6 item">
+                        <img src="assets/img/product-new-01-480x682-450x450.jpg" alt="">
+                        <div class="name">
+                            Bánh gai nhân a
+                        </div>
+                        <div class="price">
+                            80k/10 chiếc
+                        </div>
+                    </div>
+                    <div class="col-md-6 item">
+                        <img src="assets/img/product-new-01-480x682-450x450.jpg" alt="">
+                        <div class="name">
+                            Bánh gai nhân b
+                        </div>
+                        <div class="price">
+                            100k/10 chiếc
+                        </div>
+                    </div>
+                    <div class="col-md-6 item">
+                        <img src="assets/img/product-new-01-480x682-450x450.jpg" alt="">
+                        <div class="name">
+                            Bánh gai nhân a
+                        </div>
+                        <div class="price">
+                            100k/10 chiếc
+                        </div>
+                    </div>
+                    <div class="col-md-6 item">
+                        <img src="assets/img/product-new-01-480x682-450x450.jpg" alt="">
+                        <div class="name">
+                            Bánh gai nhân b
+                        </div>
+                        <div class="price">
+                            100k/10 chiếc
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 address">
+                <div class="title">
+                    ĐỊA CHỈ
+                </div>
+                <div class="list-address">
+                    <div class="item-address">
+                    <span>
+                        <i class="fa-solid fa-location-dot"></i>
+                        Cơ sở 1:
+                    </span>
+                        <a href="address.html">
+                            85 Trần Quang Diệu – Phường 8 – Quận 1 – TP Hồ Chí Minh
+                        </a>
+                    </div>
+                    <div class="item-address">
+                    <span>
+                        <i class="fa-solid fa-location-dot"></i>
+                        Cơ sở 2:
+                    </span>
+                        <a href="address.html">
+                            85 Trần Quang Diệu – Phường 8 – Quận 1 – TP Hồ Chí Minh
+                        </a>
+                    </div>
+                    <div class="item-address">
+                    <span>
+                        <i class="fa-solid fa-location-dot"></i>
+                        Cơ sở 3:
+                    </span>
+                        <a href="address.html">
+                            85 Trần Quang Diệu – Phường 8 – Quận 1 – TP Hồ Chí Minh
+                        </a>
+                    </div>
+                    <div class="item-address">
+                    <span>
+                        <i class="fa-solid fa-location-dot"></i>
+                        Cơ sở 4:
+                    </span>
+                        <a href="address.html">
+                            85 Trần Quang Diệu – Phường 8 – Quận 1 – TP Hồ Chí Minh
+                        </a>
+                    </div>
+                    <div class="item-address">
+                    <span>
+                        <i class="fa-solid fa-location-dot"></i>
+                        Cơ sở 5:
+                    </span>
+                        <a href="address.html">
+                            85 Trần Quang Diệu – Phường 8 – Quận 1 – TP Hồ Chí Minh
+                        </a>
+                    </div>
+                    <div class="item-address">
+                    <span>
+                        <i class="fa-solid fa-location-dot"></i>
+                        Cơ sở 6:
+                    </span>
+                        <a href="address.html">
+                            85 Trần Quang Diệu – Phường 8 – Quận 1 – TP Hồ Chí Minh
+                        </a>
+                    </div>
+                    <div class="item-address">
+                    <span>
+                        <i class="fa-solid fa-location-dot"></i>
+                        Cơ sở 7:
+                    </span>
+                        <a href="address.html">
+                            85 Trần Quang Diệu – Phường 8 – Quận 1 – TP Hồ Chí Minh
+                        </a>
+                    </div>
+                    <div class="item-address">
+                    <span>
+                        <i class="fa-solid fa-location-dot"></i>
+                        Cơ sở 8:
+                    </span>
+                        <a href="address.html">
+                            85 Trần Quang Diệu – Phường 8 – Quận 1 – TP Hồ Chí Minh
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
-<footer>
-
-</footer>
+<div class="phonenumber" >
+    <a href="tel:0909.090.909" class="hotlinemp" >
+        <i class="fa-solid fa-phone-volume"></i>
+        <span>0909.090.909</span>
+    </a>
+</div>
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"></script>
