--- a/address.html
+++ b/address.html
@@ -1,3 +1,7 @@
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,6 +25,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/responsive.css">
     <!-- Bánh gai Bà Tới -->
     <title>Title</title>
 </head>
@@ -29,7 +34,7 @@
     <div class="header bg-black" id="header">
         <div class="container-fluid">
             <div class="main-header row p-3">
-                <div class="col-md-3 follow-me">
+                <div class="col-6 col-md-3 follow-me">
                     <div class="main-follow">
                         <div class="content-follow">
                             <div class="follow-item text-content text-center">
@@ -38,7 +43,7 @@
                                 <span>---</span>
                             </div>
                             <div class="follow-item social-logo">
-                                <div class="d-flex justify-content-sm-around align-items-center">
+                                <div class="d-flex justify-content-around align-items-center">
                                     <div class="icon-facebook detail-social">
                                         <a href="#" class="text-green text-decoration-none">
                                             <i class="fa-brands fa-facebook-f"></i>
@@ -64,7 +69,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 main-header-detail">
+                <div class="col-12 col-md-6 main-header-detail">
                     <div class="detail-header">
                         <div class="content-header text-center">
                             <div class="header-logo">
@@ -103,7 +108,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 contact">
+                <div class="col-6 col-md-3 contact">
                     <div class="main-contact">
                         <div class="content-contact text-center">
                             <div class="follow-item text-content text-center">
@@ -122,23 +127,20 @@
     </div>
 </header>
 <section class="container body-address">
-    <div class="row">
-        <div class="col-md-5 img-address">
-            <div class="address-detail">
-                Địa chỉ: 85 Trần Quang Diệu – Phường 8 – Quận 1 – TP Hồ Chí Minh <br>
-                Liên hệ: 0985 547 412
-            </div>
-            <img src="assets/img/tiem-banh-ngot-dep.jpg" alt="">
+    <div class="img-address">
+        <div class="address-detail">
+            Địa chỉ: 208 Trần Hưng Đạo, TT. Ninh Giang, Ninh Giang, Hải Dương, Vietnam <br>
+            Liên hệ: 0972 526 462
         </div>
-        <div class="col-md-7 address-map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.096841625705!2d105.78011157500053!3d21.028810787777303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ab4cd0c66f05%3A0xea31563511af2e54!2zOCBUw7RuIFRo4bqldCBUaHV54bq_dCwgTeG7uSDEkMOsbmgsIEPhuqd1IEdp4bqleSwgSMOgIE7hu5lpLCBWaWV0bmFt!5e0!3m2!1sen!2s!4v1699397602771!5m2!1sen!2s" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+    </div>
+    <div class="address-map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3731.478257585694!2d106.39637197499319!3d20.731400897925912!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31358c53d1461267%3A0xe35158d2c1643599!2zMjA4IFRy4bqnbiBIxrBuZyDEkOG6oW8sIFRULiBOaW5oIEdpYW5nLCBOaW5oIEdpYW5nLCBI4bqjaSBExrDGoW5nLCBWaWV0bmFt!5e0!3m2!1sen!2s!4v1699684677256!5m2!1sen!2s" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 </section>
 <div class="phonenumber" >
-    <a href="tel:0909.090.909" class="hotlinemp" >
+    <a href="tel:0972 526 462" class="hotlinemp" >
         <i class="fa-solid fa-phone-volume"></i>
-        <span>0909.090.909</span>
+        <span>0972 526 462</span>
     </a>
 </div>
 </body>
