--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             <div class="header-logo">
                                 <div class="logo">
                                     <a href="index.html">
-                                        <img src="/assets/img/kaffa_logo_light_1x.png" alt="Logo-dac-san-banh-gai">
+                                        <img src="/assets/img/logo4.png" alt="Logo-dac-san-banh-gai">
                                     </a>
                                 </div>
                             </div>
@@ -113,7 +113,7 @@
                                 <span>---</span>
                             </div>
                             <p class="text-phone text-green">
-                                0909.090.909
+                                <a href="tel:0972 526 462"></a>0972 526 462
                             </p>
                         </div>
                     </div>
@@ -130,37 +130,19 @@
                     SẢN PHẨM
                 </div>
                 <div class="row">
-                    <div class="col-md-6 item">
-                        <img src="assets/img/product-new-01-480x682-450x450.jpg" alt="">
+                    <div class="col-6 item">
+                        <img src="assets/img/banhgai.jpg" alt="">
                         <div class="name">
-                            Bánh gai nhân a
+                            Bánh gai
                         </div>
                         <div class="price">
                             80k/10 chiếc
                         </div>
                     </div>
-                    <div class="col-md-6 item">
-                        <img src="assets/img/product-new-01-480x682-450x450.jpg" alt="">
+                    <div class="col-6 item">
+                        <img src="assets/img/banhgai3.jpg" alt="">
                         <div class="name">
-                            Bánh gai nhân b
-                        </div>
-                        <div class="price">
-                            100k/10 chiếc
-                        </div>
-                    </div>
-                    <div class="col-md-6 item">
-                        <img src="assets/img/product-new-01-480x682-450x450.jpg" alt="">
-                        <div class="name">
-                            Bánh gai nhân a
-                        </div>
-                        <div class="price">
-                            100k/10 chiếc
-                        </div>
-                    </div>
-                    <div class="col-md-6 item">
-                        <img src="assets/img/product-new-01-480x682-450x450.jpg" alt="">
-                        <div class="name">
-                            Bánh gai nhân b
+                            Bánh gai
                         </div>
                         <div class="price">
                             100k/10 chiếc
@@ -179,7 +161,7 @@
                         Cơ sở 1:
                     </span>
                         <a href="address.html">
-                            85 Trần Quang Diệu – Phường 8 – Quận 1 – TP Hồ Chí Minh
+                            208 Trần Hưng Đạo, TT. Ninh Giang, Ninh Giang, Hải Dương, Vietnam
                         </a>
                     </div>
                     <div class="item-address">
@@ -188,7 +170,7 @@
                         Cơ sở 2:
                     </span>
                         <a href="address.html">
-                            85 Trần Quang Diệu – Phường 8 – Quận 1 – TP Hồ Chí Minh
+                            79 Trần Hưng Đạo, P. Ngọc Châu, Hà Nội, Hải Dương, Việt Nam
                         </a>
                     </div>
                     <div class="item-address">
@@ -197,7 +179,7 @@
                         Cơ sở 3:
                     </span>
                         <a href="address.html">
-                            85 Trần Quang Diệu – Phường 8 – Quận 1 – TP Hồ Chí Minh
+                            Khu đô thi Nam Cường P. Tôn Quang Phiệt, Cổ Nhuế, Bắc Từ Liêm, Hà Nội, Việt Nam
                         </a>
                     </div>
                     <div class="item-address">
@@ -206,43 +188,7 @@
                         Cơ sở 4:
                     </span>
                         <a href="address.html">
-                            85 Trần Quang Diệu – Phường 8 – Quận 1 – TP Hồ Chí Minh
-                        </a>
-                    </div>
-                    <div class="item-address">
-                    <span>
-                        <i class="fa-solid fa-location-dot"></i>
-                        Cơ sở 5:
-                    </span>
-                        <a href="address.html">
-                            85 Trần Quang Diệu – Phường 8 – Quận 1 – TP Hồ Chí Minh
-                        </a>
-                    </div>
-                    <div class="item-address">
-                    <span>
-                        <i class="fa-solid fa-location-dot"></i>
-                        Cơ sở 6:
-                    </span>
-                        <a href="address.html">
-                            85 Trần Quang Diệu – Phường 8 – Quận 1 – TP Hồ Chí Minh
-                        </a>
-                    </div>
-                    <div class="item-address">
-                    <span>
-                        <i class="fa-solid fa-location-dot"></i>
-                        Cơ sở 7:
-                    </span>
-                        <a href="address.html">
-                            85 Trần Quang Diệu – Phường 8 – Quận 1 – TP Hồ Chí Minh
-                        </a>
-                    </div>
-                    <div class="item-address">
-                    <span>
-                        <i class="fa-solid fa-location-dot"></i>
-                        Cơ sở 8:
-                    </span>
-                        <a href="address.html">
-                            85 Trần Quang Diệu – Phường 8 – Quận 1 – TP Hồ Chí Minh
+                            122 Trần Hưng Đạo, P. Trần Phú, Thành phố Hải Dương, Hải Dương
                         </a>
                     </div>
                 </div>
@@ -251,9 +197,9 @@
     </div>
 </section>
 <div class="phonenumber" >
-    <a href="tel:0909.090.909" class="hotlinemp" >
+    <a href="tel:0972 526 462" class="hotlinemp" >
         <i class="fa-solid fa-phone-volume"></i>
-        <span>0909.090.909</span>
+        <span>0972 526 462</span>
     </a>
 </div>
 </body>
