--- a/address.html
+++ b/address.html
@@ -75,7 +75,7 @@
                             <div class="header-logo">
                                 <div class="logo">
                                     <a href="index.html">
-                                        <img src="/assets/img/kaffa_logo_light_1x.png" alt="Logo-dac-san-banh-gai">
+                                        <img src="/assets/img/logo4.png" alt="Logo-dac-san-banh-gai">
                                     </a>
                                 </div>
                             </div>
