--- a/address3.html
+++ b/address3.html
@@ -75,7 +75,7 @@
                             <div class="header-logo">
                                 <div class="logo">
                                     <a href="index.html">
-                                        <img src="/assets/img/kaffa_logo_light_1x.png" alt="Logo-dac-san-banh-gai">
+                                        <img src="/assets/img/logo4.png" alt="Logo-dac-san-banh-gai">
                                     </a>
                                 </div>
                             </div>
@@ -129,12 +129,12 @@
 <section class="container body-address">
     <div class="img-address">
         <div class="address-detail">
-            Địa chỉ: 208 Trần Hưng Đạo, TT. Ninh Giang, Ninh Giang, Hải Dương, Vietnam <br>
-            Liên hệ: 0985 547 412
+            Địa chỉ: Khu đô thi Nam Cường P. Tôn Quang Phiệt, Cổ Nhuế, Bắc Từ Liêm, Hà Nội, Việt Nam  <br>
+            Liên hệ: 0972 526 462
         </div>
     </div>
     <div class="address-map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d7447.262708435336!2d105.7853562!3d21.0474315!3m2!1i1024!2i768!4f13.1!3m2!1m1!2s!5e0!3m2!1sen!2s!4v1699858181000!5m2!1sen!2s" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7447.262708435336!2d105.7853562!3d21.0474315!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ab2cf0a00591%3A0xebfe3ee52a125946!2zQsOhbmggR2FpIELDoCBU4bubaSAtIEPGoSBT4bufIEjDoCBO4buZaSAtIEPGoSBT4bufIDM!5e0!3m2!1svi!2s!4v1699861702170!5m2!1svi!2s" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 </section>
 <div class="phonenumber" >
