--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             Bánh gai
                         </div>
                         <div class="price">
-                            100k/10 chiếc
+                            150k/15 chiếc
                         </div>
                     </div>
                 </div>
@@ -169,7 +169,7 @@
                         <i class="fa-solid fa-location-dot"></i>
                         Cơ sở 2:
                     </span>
-                        <a href="address.html">
+                        <a href="address2.html">
                             79 Trần Hưng Đạo, P. Ngọc Châu, Hà Nội, Hải Dương, Việt Nam
                         </a>
                     </div>
@@ -178,7 +178,7 @@
                         <i class="fa-solid fa-location-dot"></i>
                         Cơ sở 3:
                     </span>
-                        <a href="address.html">
+                        <a href="address3.html">
                             Khu đô thi Nam Cường P. Tôn Quang Phiệt, Cổ Nhuế, Bắc Từ Liêm, Hà Nội, Việt Nam
                         </a>
                     </div>
@@ -187,7 +187,7 @@
                         <i class="fa-solid fa-location-dot"></i>
                         Cơ sở 4:
                     </span>
-                        <a href="address.html">
+                        <a href="address4.html">
                             122 Trần Hưng Đạo, P. Trần Phú, Thành phố Hải Dương, Hải Dương
                         </a>
                     </div>
