Fix csc + logo.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
     <!-- Bánh gai Bà Tới -->
-    <title>Title</title>
+    <title>Bánh gai Bà Tới</title>
 </head>
 <body>
 <header>
@@ -71,7 +71,7 @@
                             <div class="header-logo">
                                 <div class="logo">
                                     <a href="index.html">
-                                        <img src="/assets/img/logo4.png" alt="Logo-dac-san-banh-gai">
+                                        <img src="assets/img/logo4.png" alt="Logo-dac-san-banh-gai">
                                     </a>
                                 </div>
                             </div>
