--- a/address.html
+++ b/address.html
@@ -24,8 +24,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="/assets/css/responsive.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/responsive.css">
     <!-- Bánh gai Bà Tới -->
     <title>Title</title>
 </head>
@@ -75,7 +75,7 @@
                             <div class="header-logo">
                                 <div class="logo">
                                     <a href="index.html">
-                                        <img src="/assets/img/logo4.png" alt="Logo-dac-san-banh-gai">
+                                        <img src="assets/img/logo4.png" alt="Logo-dac-san-banh-gai">
                                     </a>
                                 </div>
                             </div>
@@ -147,5 +147,5 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"></script>
-<script src="/assets/js/main.js"></script>
+<script src="assets/js/main.js"></script>
 </html>
