--- a/index.html
+++ b/index.html
@@ -156,13 +156,22 @@
                 </div>
                 <div class="list-address">
                     <div class="item-address">
-                    <span>
-                        <i class="fa-solid fa-location-dot"></i>
-                        Cơ sở 1:
-                    </span>
-                        <a href="address.html">
-                            208 Trần Hưng Đạo, TT. Ninh Giang, Ninh Giang, Hải Dương, Vietnam
+                        <span>
+                            <i class="fa-solid fa-location-dot"></i>
+                            Cơ sở 1:
+                        </span>
+                        <a href="address.html">208 Trần Hưng Đạo, TT. Ninh Giang, Ninh Giang, Hải Dương, Vietnam <br>
                         </a>
+                        <span> Liên hệ :
+                            <a href="tel:0972526462">
+                                   0972 526 462
+                            </a>
+                        </span> <br>
+                        <span> Google Map :
+                            <a class="map" href="https://www.google.com/maps/dir//B%C3%A1nh+Gai+B%C3%A0+T%E1%BB%9Bi+-+H%C3%B9ng+Th%E1%BA%A3o+(+C%C6%A1+S%E1%BB%9F+1)/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x31358c543724e8f3:0xdc7b3e179be94594?sa=X&ved=2ahUKEwjTt6PCsbuCAxUuc_UHHYdFDDMQ9Rd6BAhBEAA&hl=vi">
+                                https://www.google.com/maps/dir//B%C3%A1nh+Gai+B%C3%A0+T%E1%BB%9Bi+-+H%C3%B9ng+Th%E1%BA%A3o+(+C%C6%A1+S%E1%BB%9F+1)/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x31358c543724e8f3:0xdc7b3e179be94594?sa=X&ved=2ahUKEwjTt6PCsbuCAxUuc_UHHYdFDDMQ9Rd6BAhBEAA&hl=vi
+                            </a>
+                        </span>
                     </div>
                     <div class="item-address">
                     <span>
@@ -171,7 +180,17 @@
                     </span>
                         <a href="address2.html">
                             79 Trần Hưng Đạo, P. Ngọc Châu, Hà Nội, Hải Dương, Việt Nam
-                        </a>
+                        </a><br>
+                        <span> Liên hệ :
+                            <a href="tel:0979102325">
+                                   0979 102 325
+                            </a>
+                        </span> <br>
+                        <span> Google Map :
+                            <a class="map" href="https://www.google.com/maps/dir//B%C3%A1nh+Gai+B%C3%A0+T%E1%BB%9Bi+-+H%C3%B9ng+Th%E1%BA%A3o.+C%C6%A1+S%E1%BB%9F+2/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x31359b77380eb6c9:0x2e31525a63fde0b4?sa=X&ved=2ahUKEwiuwK-EsruCAxWWpVYBHVFiDjsQ9Rd6BAg-EAA&hl=vi">
+                                https://www.google.com/maps/dir//B%C3%A1nh+Gai+B%C3%A0+T%E1%BB%9Bi+-+H%C3%B9ng+Th%E1%BA%A3o.+C%C6%A1+S%E1%BB%9F+2/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x31359b77380eb6c9:0x2e31525a63fde0b4?sa=X&ved=2ahUKEwiuwK-EsruCAxWWpVYBHVFiDjsQ9Rd6BAg-EAA&hl=vi
+                            </a>
+                        </span>
                     </div>
                     <div class="item-address">
                     <span>
@@ -180,7 +199,17 @@
                     </span>
                         <a href="address3.html">
                             Khu đô thi Nam Cường P. Tôn Quang Phiệt, Cổ Nhuế, Bắc Từ Liêm, Hà Nội, Việt Nam
-                        </a>
+                        </a><br>
+                        <span> Liên hệ :
+                            <a href="tel:0972 526 462">
+                                   0972 526 462
+                            </a>
+                        </span> <br>
+                        <span> Google Map :
+                            <a class="map" href="https://www.google.com/maps/place/B%C3%A1nh+Gai+B%C3%A0+T%E1%BB%9Bi+-+C%C6%A1+S%E1%BB%9F+H%C3%A0+N%E1%BB%99i+-+C%C6%A1+S%E1%BB%9F+3/@21.0474315,105.7853562,16.57z/data=!4m20!1m13!4m12!1m4!2m2!1d105.7938072!2d21.047609!4e1!1m6!1m2!1s0x3135ab2cf0a00591:0xebfe3ee52a125946!2zQsOhbmggR2FpIELDoCBU4bubaSAtIEPGoSBT4bufIEjDoCBO4buZaSAtIEPGoSBT4bufIDM!2m2!1d105.7866634!2d21.0503429!3m5!1s0x3135ab2cf0a00591:0xebfe3ee52a125946!8m2!3d21.0503429!4d105.7866634!16s%2Fg%2F11v0nrtndv?hl=vi&entry=ttu">
+                                https://www.google.com/maps/place/B%C3%A1nh+Gai+B%C3%A0+T%E1%BB%9Bi+-+C%C6%A1+S%E1%BB%9F+H%C3%A0+N%E1%BB%99i+-+C%C6%A1+S%E1%BB%9F+3/@21.0474315,105.7853562,16.57z/data=!4m20!1m13!4m12!1m4!2m2!1d105.7938072!2d21.047609!4e1!1m6!1m2!1s0x3135ab2cf0a00591:0xebfe3ee52a125946!2zQsOhbmggR2FpIELDoCBU4bubaSAtIEPGoSBT4bufIEjDoCBO4buZaSAtIEPGoSBT4bufIDM!2m2!1d105.7866634!2d21.0503429!3m5!1s0x3135ab2cf0a00591:0xebfe3ee52a125946!8m2!3d21.0503429!4d105.7866634!16s%2Fg%2F11v0nrtndv?hl=vi&entry=ttu
+                            </a>
+                        </span>
                     </div>
                     <div class="item-address">
                     <span>
@@ -189,7 +218,17 @@
                     </span>
                         <a href="address4.html">
                             122 Trần Hưng Đạo, P. Trần Phú, Thành phố Hải Dương, Hải Dương
-                        </a>
+                        </a><br>
+                        <span> Liên hệ :
+                            <a href="tel:0931 511 559">
+                                   0931 511 559
+                            </a>
+                        </span> <br>
+                        <span> Google Map :
+                            <a class="map" href="https://www.google.com/maps/dir//B%C3%A1nh+Gai+B%C3%A0+T%E1%BB%9Bi+-+H%C3%B9ng+Th%E1%BA%A3o.+C%C6%A1+S%E1%BB%9F+4/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x31359b83095db4e7:0x55b353b15d8ff7a4?sa=X&ved=2ahUKEwjr_fbtsruCAxV8q1YBHWEeAVoQ9Rd6BAg9EAA&hl=vi">
+                                https://www.google.com/maps/dir//B%C3%A1nh+Gai+B%C3%A0+T%E1%BB%9Bi+-+H%C3%B9ng+Th%E1%BA%A3o.+C%C6%A1+S%E1%BB%9F+4/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x31359b83095db4e7:0x55b353b15d8ff7a4?sa=X&ved=2ahUKEwjr_fbtsruCAxV8q1YBHWEeAVoQ9Rd6BAg9EAA&hl=vi
+                            </a>
+                        </span>
                     </div>
                 </div>
             </div>
