--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
                                    0972 526 462
                             </a>
                         </span> <br>
-                        <span> Google Map :
+                        <span>
                             <a class="map" href="https://www.google.com/maps/dir//B%C3%A1nh+Gai+B%C3%A0+T%E1%BB%9Bi+-+H%C3%B9ng+Th%E1%BA%A3o+(+C%C6%A1+S%E1%BB%9F+1)/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x31358c543724e8f3:0xdc7b3e179be94594?sa=X&ved=2ahUKEwjTt6PCsbuCAxUuc_UHHYdFDDMQ9Rd6BAhBEAA&hl=vi">
-                                https://www.google.com/maps/dir//B%C3%A1nh+Gai+B%C3%A0+T%E1%BB%9Bi+-+H%C3%B9ng+Th%E1%BA%A3o+(+C%C6%A1+S%E1%BB%9F+1)/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x31358c543724e8f3:0xdc7b3e179be94594?sa=X&ved=2ahUKEwjTt6PCsbuCAxUuc_UHHYdFDDMQ9Rd6BAhBEAA&hl=vi
+                                 Vị trí googlemap
                             </a>
                         </span>
                     </div>
@@ -186,9 +186,9 @@
                                    0979 102 325
                             </a>
                         </span> <br>
-                        <span> Google Map :
+                        <span>
                             <a class="map" href="https://www.google.com/maps/dir//B%C3%A1nh+Gai+B%C3%A0+T%E1%BB%9Bi+-+H%C3%B9ng+Th%E1%BA%A3o.+C%C6%A1+S%E1%BB%9F+2/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x31359b77380eb6c9:0x2e31525a63fde0b4?sa=X&ved=2ahUKEwiuwK-EsruCAxWWpVYBHVFiDjsQ9Rd6BAg-EAA&hl=vi">
-                                https://www.google.com/maps/dir//B%C3%A1nh+Gai+B%C3%A0+T%E1%BB%9Bi+-+H%C3%B9ng+Th%E1%BA%A3o.+C%C6%A1+S%E1%BB%9F+2/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x31359b77380eb6c9:0x2e31525a63fde0b4?sa=X&ved=2ahUKEwiuwK-EsruCAxWWpVYBHVFiDjsQ9Rd6BAg-EAA&hl=vi
+                                 Vị trí googlemap
                             </a>
                         </span>
                     </div>
@@ -205,9 +205,9 @@
                                    0972 526 462
                             </a>
                         </span> <br>
-                        <span> Google Map :
+                        <span>
                             <a class="map" href="https://www.google.com/maps/place/B%C3%A1nh+Gai+B%C3%A0+T%E1%BB%9Bi+-+C%C6%A1+S%E1%BB%9F+H%C3%A0+N%E1%BB%99i+-+C%C6%A1+S%E1%BB%9F+3/@21.0474315,105.7853562,16.57z/data=!4m20!1m13!4m12!1m4!2m2!1d105.7938072!2d21.047609!4e1!1m6!1m2!1s0x3135ab2cf0a00591:0xebfe3ee52a125946!2zQsOhbmggR2FpIELDoCBU4bubaSAtIEPGoSBT4bufIEjDoCBO4buZaSAtIEPGoSBT4bufIDM!2m2!1d105.7866634!2d21.0503429!3m5!1s0x3135ab2cf0a00591:0xebfe3ee52a125946!8m2!3d21.0503429!4d105.7866634!16s%2Fg%2F11v0nrtndv?hl=vi&entry=ttu">
-                                https://www.google.com/maps/place/B%C3%A1nh+Gai+B%C3%A0+T%E1%BB%9Bi+-+C%C6%A1+S%E1%BB%9F+H%C3%A0+N%E1%BB%99i+-+C%C6%A1+S%E1%BB%9F+3/@21.0474315,105.7853562,16.57z/data=!4m20!1m13!4m12!1m4!2m2!1d105.7938072!2d21.047609!4e1!1m6!1m2!1s0x3135ab2cf0a00591:0xebfe3ee52a125946!2zQsOhbmggR2FpIELDoCBU4bubaSAtIEPGoSBT4bufIEjDoCBO4buZaSAtIEPGoSBT4bufIDM!2m2!1d105.7866634!2d21.0503429!3m5!1s0x3135ab2cf0a00591:0xebfe3ee52a125946!8m2!3d21.0503429!4d105.7866634!16s%2Fg%2F11v0nrtndv?hl=vi&entry=ttu
+                                 Vị trí googlemap
                             </a>
                         </span>
                     </div>
@@ -224,9 +224,9 @@
                                    0931 511 559
                             </a>
                         </span> <br>
-                        <span> Google Map :
+                        <span>
                             <a class="map" href="https://www.google.com/maps/dir//B%C3%A1nh+Gai+B%C3%A0+T%E1%BB%9Bi+-+H%C3%B9ng+Th%E1%BA%A3o.+C%C6%A1+S%E1%BB%9F+4/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x31359b83095db4e7:0x55b353b15d8ff7a4?sa=X&ved=2ahUKEwjr_fbtsruCAxV8q1YBHWEeAVoQ9Rd6BAg9EAA&hl=vi">
-                                https://www.google.com/maps/dir//B%C3%A1nh+Gai+B%C3%A0+T%E1%BB%9Bi+-+H%C3%B9ng+Th%E1%BA%A3o.+C%C6%A1+S%E1%BB%9F+4/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x31359b83095db4e7:0x55b353b15d8ff7a4?sa=X&ved=2ahUKEwjr_fbtsruCAxV8q1YBHWEeAVoQ9Rd6BAg9EAA&hl=vi
+                                 Vị trí googlemap
                             </a>
                         </span>
                     </div>
